--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
 /* Main app */
 
+.header {
+  padding-top: 12px;
+  background: #fff;
+}
+
+.content {
+  margin: 24px 16px;
+  padding: 20px;
+}
+
+.triger-btn {
+  font-size: 16px;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+}
+
 /* Sider */
 .sider {
   height: 100vh;
