--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@
   width: 50px;
   height: 50px;
   position: fixed;
+  bottom: 10px;
+  left: 10px;
+
 }
 
 /* Sider */
@@ -29,4 +32,15 @@
   color: #4f6f52;
   margin: 30px 0;
   font-size: 1.5rem;
+}
+
+.menu_bar {
+  display: flex;;
+  flex-direction: column;
+  gap: 10px;
+  font-weight: 500;
+}
+.ant-menu-item-selected {
+  background-color: #4f6f52  !important;
+  color: #fff !important;
 }
