--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,28 @@
 }
 
 
+/* logo text */
+.logo-text {
+  font-weight: 700;
+  padding-left: 10px;
+  font-size: 30px;
+}
+
+/* header */
+
 .header-icon {
   background: #d2e3c8;
   padding: 8px;
   border-radius: 4px;
+  font-size: 15px;
+  color: #4f6f52;
+  cursor: pointer;
+}
+
+/* buttons and colors */
+.ant-bnt:hover {
+  color: #4f6f52 !important;
+  border-color:#4f6f52 !important;
+
+
 }
