--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,10 @@
   color: rgb(182,181,181) !important;
  
 }
+
+/* palant listing */
+.plant-card {
+flex: 1;
+height: 250px;
+text-align: center;
+}
