--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@
   color: #d2e3c8 !important;
 }
 
-.grey--color {
+.gray--color {
   color: rgb(182,181,181) !important;
  
 }
@@ -102,4 +102,8 @@
 flex: 1;
 height: 250px;
 text-align: center;
+}
+
+.top-seller {
+
 }
